Adding initial support for different weapon types.
Added rifle and melee. Currently the only difference is the name and
range of these two weapons.

--- a/game/input.conf
+++ b/game/input.conf
@@ -4,7 +4,8 @@ move_backward = s, arrow_down
 move_left = a, arrow_left
 move_right = d, arrow_right
 jump = space
-fire = mouse1
+left_fire = mouse1
+right_fire = mouse3
 display_map = tab
 buy_mode = lshift
 purchase = mouse1
