--- a/game/input.conf
+++ b/game/input.conf
@@ -3,11 +3,12 @@ move_forward = w, arrow_up
 move_backward = s, arrow_down
 move_left = a, arrow_left
 move_right = d, arrow_right
+sprint = lshift
 jump = space
 left_fire = mouse1
 right_fire = mouse3
 display_map = tab
-buy_mode = lshift
+buy_mode = lcontrol
 purchase = mouse1
 
 ; UI
